--- a/nbs/classroom_01_sillehm.ipynb
+++ b/nbs/classroom_01_sillehm.ipynb
@@ -57,16 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def concat_any_string():\n",
-    "    \n",
-    "    \n",
+    "def concat_any_string(*args):\n",
+    "    string = \"\"\n",
     "\n",
+    "    for i in args:\n",
+    "        string += i\n",
     "\n",
-    "    pass"
+    "    return string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I would like some coffee!'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concat_any_string(\"I\", \" would\", \" like\", \" some\", \" coffee\", \"!\")"
    ]
   },
   {
@@ -83,13 +104,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def letter_count(l, s):\n",
-    "    ''' Add code '''\n",
-    "    pass"
+    "def letter_count(letter, string):\n",
+    "\n",
+    "    return string.count(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter_count(\"a\",\"anja\")"
    ]
   },
   {
@@ -98,6 +139,33 @@
    "source": [
     "Can you make a function that generalizes to l being any sequence of characters (e.g., counting how many times the substring `ab` occurs)? \n",
     "Hint: you can do it in base python, or use functions (e.g., `findall`) from the regex package `re`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The substring 'it' occurs 2 times in the string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def substring_count(characters, string):\n",
+    "    occurrences = re.findall(characters, string)\n",
+    "    return len(occurrences)\n",
+    "\n",
+    "# Example usage:\n",
+    "string = \"Anja læser cognitivive science på Aarhus Universitet\"\n",
+    "characters = \"it\"\n",
+    "result = substring_count(characters, string)\n",
+    "print(f\"The substring '{characters}' occurs {result} times in the string.\")"
    ]
   },
   {
@@ -110,13 +178,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generalized_counter(l, s):\n",
-    "    ''' Add code '''\n",
-    "    pass"
+    "\n",
+    "def generalized_counter(characters, string):\n",
+    "    counts = {}\n",
+    "    \n",
+    "    for character in characters:\n",
+    "        occurrences = re.findall(character, string)\n",
+    "        counts[character] = len(occurrences)\n",
+    "    \n",
+    "    return counts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ea': 2, 'ou': 2, 'pa': 1, 'i': 2, 'u': 3}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"pasta is a great source of gluten when you eat it\"\n",
+    "characters = [\"ea\", \"ou\", \"pa\", \"i\", \"u\"]\n",
+    "generalized_counter(characters, string)"
    ]
   },
   {
@@ -137,11 +233,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', '\"Well,', 'Prince,', 'so', 'Genoa']\n",
+      "['CHAPTER I\\n', '\\n', '\"Well, Prince, so Genoa and Lucca are now just family estates of the\\n', \"Buonapartes. But I warn you, if you don't tell me that this means war,\\n\", 'if you still try to defend the infamies and horrors perpetrated by that\\n', 'Antichrist--I really believe he is Antichrist--I will have nothing more\\n']\n"
+     ]
+    }
+   ],
    "source": [
-    "# read book-war-and-peace.txt as a string or using readlines"
+    "# opening file, and reading content\n",
+    "book_file = open(\"../data/book-war-and-peace.txt\", \"r\")\n",
+    "book_content = book_file.read()\n",
+    "\n",
+    "book_words = book_content.split()\n",
+    "print(book_words[1:6])\n",
+    "\n",
+    "# Reset the file pointer to the beginning of the file (to avoid empty list, because it will start readlines in the end of the document because it ends there with read())\n",
+    "book_file.seek(0)\n",
+    "\n",
+    "# readlines\n",
+    "book_lines = book_file.readlines()\n",
+    "book_file.close()\n",
+    "print(book_lines[0:6])"
    ]
   },
   {
@@ -160,11 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove \\n and non-alphanumeric characters"
+    "import re\n",
+    "\n",
+    "# Remove \\n\n",
+    "book_clean = re.sub(\"\\n\", \" \", book_content)\n",
+    "\n",
+    "# remove multiple whitespaces\n",
+    "book_clean = re.sub(\"\\s+\", \" \", book_content) # \\s for whitespace + for one or more instances\n",
+    "\n",
+    "# remove non-alphanumeric characters\n",
+    "book_clean = re.sub(\"[^a-zA-Z0-9\\s]\", \"\", book_content) #^ for characters not otherwise defined in the bracets\n",
+    "\n"
    ]
   },
   {
