--- a/nbs/classroom_01.ipynb
+++ b/nbs/classroom_01.ipynb
@@ -1628,9 +1628,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp-e23",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nlp-e23"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1642,7 +1642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
