own versions of nbs

--- a/nbs/classroom_01_sillehm.ipynb
+++ b/nbs/classroom_01_sillehm.ipynb
@@ -109,6 +109,12 @@
    "outputs": [],
    "source": [
     "def letter_count(letter, string):\n",
+    "    lower_s = string.lower()       # to prepare to count\n",
+    "    c = 0                          # defining counter \n",
+    "    for character in lower_s:\n",
+    "        if character==1:\n",
+    "            c =+1\n",
+    "\n",
     "\n",
     "    return string.count(letter)"
    ]
@@ -289,9 +295,11 @@
     "\n",
     "# remove multiple whitespaces\n",
     "book_clean = re.sub(\"\\s+\", \" \", book_content) # \\s for whitespace + for one or more instances\n",
+    "# another way is to use + sign - any repeated instances of what comes before so space + any repeated spaces \n",
     "\n",
     "# remove non-alphanumeric characters\n",
     "book_clean = re.sub(\"[^a-zA-Z0-9\\s]\", \"\", book_content) #^ for characters not otherwise defined in the bracets\n",
+    "# remember the + to find sequences of symbols we don't want\n",
     "\n"
    ]
   },
@@ -316,7 +324,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add code"
+    "# start by lowercasing and splitting on whitespace\n",
+    "new_text = text_no_alphanumeric.lower()\n",
+    "counts = dict(Counter(new_text.split())) # split is a list of words and counter is then used to counter the wordfs in the list \n",
+    "# gives frequencies in dictionary like structure so explicitely convert to dict"
    ]
   },
   {
@@ -324,6 +335,19 @@
    "metadata": {},
    "source": [
     "#### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating dataframe to plot\n",
+    "import pandas as pd\n",
+    "data = pd.DataFrame.from_dict(data=counts, \n",
+    "                              orient='index').sort_values(by=0, # by first column\n",
+    "                                                          ascending=False).reset_index() # new coulumn with index and a coulumn called index which is the words"
    ]
   }
  ],
