--- a/nbs/classroom_05_with_solution_sillehm.ipynb
+++ b/nbs/classroom_05_with_solution_sillehm.ipynb
@@ -709,9 +709,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
