--- a/nbs/classroom_05_with_solution_sillehm.ipynb
+++ b/nbs/classroom_05_with_solution_sillehm.ipynb
@@ -32,21 +32,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# python -m spacy download en_core_web_sm\n",
     "import spacy\n",
     "\n",
-    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
     "doc = nlp(\"Hello my name is Roberta. I live in Denmark and work at Aarhus University, I am Italian and today is Wednesday 25th.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Hello my name is \n",
+       "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Roberta\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
+       "</mark>\n",
+       ". I live in \n",
+       "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Denmark\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+       "</mark>\n",
+       " and work at \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Aarhus University\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ", I am \n",
+       "<mark class=\"entity\" style=\"background: #c887fb; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Italian\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">NORP</span>\n",
+       "</mark>\n",
+       " and \n",
+       "<mark class=\"entity\" style=\"background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    today\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+       "</mark>\n",
+       " is \n",
+       "<mark class=\"entity\" style=\"background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Wednesday 25th\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from spacy import displacy\n",
     "displacy.render(doc, style=\"ent\")"
@@ -74,9 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello O\n",
+      "my O\n",
+      "name O\n",
+      "is O\n",
+      "Roberta B-PERSON\n",
+      ". O\n",
+      "I O\n",
+      "live O\n",
+      "in O\n",
+      "Denmark B-GPE\n",
+      "and O\n",
+      "work O\n",
+      "at O\n",
+      "Aarhus B-ORG\n",
+      "University I-ORG\n",
+      ", O\n",
+      "I O\n",
+      "am O\n",
+      "Italian B-NORP\n",
+      "and O\n",
+      "today B-DATE\n",
+      "is O\n",
+      "Wednesday B-DATE\n",
+      "25th I-DATE\n",
+      ". O\n"
+     ]
+    }
+   ],
    "source": [
     "for t in doc:\n",
     "    if t.ent_type:\n",
@@ -125,9 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/NLP-AU-23/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# this allows us to look one step up in the directory\n",
     "# for importing custom modules from src\n",
@@ -165,9 +250,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 100%|██████████| 8.73k/8.73k [00:00<00:00, 4.30MB/s]\n",
+      "Downloading metadata: 100%|██████████| 3.35k/3.35k [00:00<00:00, 5.49MB/s]\n",
+      "Downloading readme: 100%|██████████| 7.70k/7.70k [00:00<00:00, 10.1MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset conllpp/conllpp to /home/ucloud/.cache/huggingface/datasets/conllpp/conllpp/1.0.0/04f15f257dff3fe0fb36e049b73d51ecdf382698682f5e590b7fb13898206ba2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading data: 3.28MB [00:00, 44.3MB/s]                  ]\n",
+      "Downloading data: 827kB [00:00, 19.4MB/s]                   2.05s/it]\n",
+      "Downloading data: 749kB [00:00, 18.0MB/s]                   1.67s/it]\n",
+      "Downloading data files: 100%|██████████| 3/3 [00:04<00:00,  1.63s/it]\n",
+      "Extracting data files: 100%|██████████| 3/3 [00:00<00:00, 579.54it/s]\n",
+      "                                                                                         \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset conllpp downloaded and prepared to /home/ucloud/.cache/huggingface/datasets/conllpp/conllpp/1.0.0/04f15f257dff3fe0fb36e049b73d51ecdf382698682f5e590b7fb13898206ba2. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 429.30it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# DATASET\n",
     "dataset = load_dataset(\"conllpp\")\n",
@@ -194,9 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[==================================================] 100.0% 66.0/66.0MB downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "# CONVERTING EMBEDDINGS\n",
     "model = api.load(\"glove-wiki-gigaword-50\")\n",
@@ -217,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,13 +379,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
     "batches_tokens = batch(shuffled_train[\"tokens\"], batch_size)\n",
     "batches_tags = batch(shuffled_train[\"ner_tags\"], batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object batch at 0x7fac13cf6ab0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(batches_tokens)"
    ]
   },
   {
@@ -267,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,9 +492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9., 9., 9., ..., 9., 9., 9.],\n",
+       "       [9., 9., 9., ..., 9., 9., 9.],\n",
+       "       [9., 9., 9., ..., 9., 9., 9.],\n",
+       "       ...,\n",
+       "       [9., 9., 9., ..., 9., 9., 9.],\n",
+       "       [9., 9., 9., ..., 9., 9., 9.],\n",
+       "       [9., 9., 9., ..., 9., 9., 9.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_labels"
    ]
