--- a/nbs/classroom_05_with_solution.ipynb
+++ b/nbs/classroom_05_with_solution.ipynb
@@ -267,9 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtokens_to_idx\u001b[39m(tokens, vocab\u001b[39m=\u001b[39mmodel\u001b[39m.\u001b[39mkey_to_index):\n\u001b[1;32m      2\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m    - Write documentation for this function including type hints for each argument and return statement\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m    - What does the .get method do?\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m    - Why lowercase?\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     \u001b[39mreturn\u001b[39;00m [vocab\u001b[39m.\u001b[39mget(t\u001b[39m.\u001b[39mlower(), vocab[\u001b[39m\"\u001b[39m\u001b[39mUNK\u001b[39m\u001b[39m\"\u001b[39m]) \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m tokens]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def tokens_to_idx(tokens, vocab=model.key_to_index):\n",
     "    \"\"\"\n",
@@ -709,9 +721,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
